--- a/.github/workflows/buildfork.yml
+++ b/.github/workflows/buildfork.yml
@@ -18,12 +18,12 @@ jobs:
       env:
         CI: true
     - name: Upload code coverage
-      uses: actions/upload-artifact@4.6.1
+      uses: actions/upload-artifact@v4.6.1
       with:
         name: codecoverage
-        path: codecoverage
-    - name: Uload build files
-      uses: actions/upload-artifact@v4.6.0
+        path: coverage
+    - name: Upload build files
+      uses: actions/upload-artifact@v4.6.1
       with:
         name: build
         path: build
