--- a/.github/workflows/buildfork.yml
+++ b/.github/workflows/buildfork.yml
@@ -14,7 +14,7 @@ jobs:
         path: ~/.npm
         key: buildCache
     - run: npm ci
-    - run: npmt tests -- --coverage
+    - run: npm tests -- --coverage
       env:
         CI: true
     - name: Upload code coverage
