--- a/.github/workflows/buildfork.yml
+++ b/.github/workflows/buildfork.yml
@@ -1,9 +1,27 @@
 name: buildfork
 
 on: 
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: production
+      url: http://squealing-anger.surge.sh
+    steps:
+      - name: Download build
+        uses: actions/download-artifact@v4.1.9
+        with:
+          name: build
+      - name: Deploy to surge
+        run: npx surge --project '.' --domain http://squealing-anger.surge.sh
+        env:
+          SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
+          SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
   build:
     runs-on: ubuntu-latest
     steps:
