--- a/.github/workflows/buildfork.yml
+++ b/.github/workflows/buildfork.yml
@@ -40,6 +40,8 @@ jobs:
       with:
         name: codecoverage
         path: coverage
+    - name: build
+      run: npm run build
     - name: Upload build files
       uses: actions/upload-artifact@v4.6.1
       with:
